# mofka

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  COPYRIGHT  README.md  build.sh  default-partition-design.md  initial-setup.json  spack.yaml
.github/: initial-setup.py
.github/workflows/: codecov.yml  polaris.yml  setup.yml  test.yml
benchmark/: CMakeLists.txt  Communicator.hpp  Consumer.hpp  DataGenerator.hpp  MetadataGenerator.hpp  Producer.hpp  PropertyListSerializer.hpp  RNG.hpp  Statistics.hpp  StringGenerator.hpp  benchmark.cpp  config.json
benchmark/mofka-vs-kafka/: Benchmark.cpp
docs/: conf.py  index.rst  requirements.txt
docs/_code/: CMakeLists.txt  advanced-config.json  benchmark-config.json  complex-storage-server.json  consumer.cpp  consumer.py  default-config.json  default-partition-config.json  energy_partition_selector.cpp  energy_serializer.cpp  energy_topic.cpp  energy_topic.py  energy_topic.sh  energy_validator.cpp  kafka_consumer.cpp  kafka_consumer.py  kafka_producer.cpp  kafka_producer.py  legacy-config.json  master-memory-config.json  master-rocksdb-config.json  producer.cpp  producer.py  simple-config.json  split-data.json  split-metadata.json  split-partition.json  storage-memory-config.json  storage-persistent-config.json  storage-persistent-config.jx9
docs/usage/: advanced.rst  architecture.rst  benchmarking.rst  consumer.rst  deployment.rst  installation.rst  kafka.rst  producer.rst  quickstart.rst  restarting.rst  topics.rst
example/: CMakeLists.txt  config.json  consumer.cpp  producer.cpp
example/python/: config.json  launch.sh  work.py
examples/: CMakeLists.txt  admin.cpp  client.cpp  server.cpp
include/alpha/: Admin.hpp  AsyncRequest.hpp  Backend.hpp  Client.hpp  Exception.hpp  Provider.hpp  ProviderHandle.hpp  RequestResult.hpp  ResourceHandle.hpp  UUID.hpp
include/mofka/: Admin.hpp  Archive.hpp  ArgsUtil.hpp  AsyncRequest.hpp  Backend.hpp  BatchSize.hpp  BufferWrapperArchive.hpp  BulkRef.hpp  Client.hpp  Consumer.hpp  ConsumerHandle.hpp  Data.hpp  DataBroker.hpp  DataDescriptor.hpp  DataSelector.hpp  DataStore.hpp  Event.hpp  EventID.hpp  EventProcessor.hpp  Exception.hpp  Factory.hpp  ForwardDcl.hpp  Future.hpp  InvalidMetadata.hpp  Json.hpp  KafkaDriver.hpp  Metadata.hpp  MofkaConsumer.hpp  MofkaDriver.hpp  MofkaEvent.hpp  MofkaPartitionInfo.hpp  MofkaProducer.hpp  MofkaThreadPool.hpp  MofkaTopicHandle.hpp  NumEvents.hpp  Ordering.hpp  PartitionManager.hpp  PartitionSelector.hpp  Producer.hpp  Promise.hpp  (+13 more)
python/: CMakeLists.txt  mofkactl.in  mofkactl.sh.in  py-mofka-client.cpp  py-mofka-kafka.cpp
python/mochi/mofka/: client.py  mofkactl.py  spec.py  test_config_space.py
python/mochi/mofka/mofkactl/: __main__.py  _util.py  benchmark.py  config.py  data.py  metadata.py  partition.py  topic.py
src/: ActiveProducerBatchQueue.hpp  Admin.cpp  AdminImpl.hpp  AsyncRequest.cpp  AsyncRequestImpl.hpp  Backend.cpp  BakeDataStore.cpp  BakeDataStore.hpp  BatchImpl.hpp  BatchProducer.cpp  BatchProducer.hpp  BedrockModule.cpp  CMakeLists.txt  CerealArchiveAdaptor.hpp  Client.cpp  ClientImpl.hpp  Consumer.cpp  ConsumerBatchImpl.hpp  ConsumerHandle.cpp  ConsumerHandle.hpp  ConsumerHandleImpl.hpp  ConsumerImpl.hpp  Data.cpp  DataBroker.cpp  DataDescriptor.cpp  DataDescriptorImpl.hpp  DataImpl.hpp  DataStore.cpp  DefaultPartitionManager.cpp  DefaultPartitionManager.hpp  DefaultPartitionSelector.hpp  DefaultSerializer.hpp  DefaultTargetSelector.hpp  DefaultTopicManager.cpp  DefaultTopicManager.hpp  DefaultValidator.hpp  Event.cpp  EventImpl.hpp  EventbridgeValidator.cpp  EventbridgeValidator.hpp  (+93 more)
src/dummy/: DummyBackend.cpp  DummyBackend.hpp  DummyTopicManager.cpp  DummyTopicManager.hpp
tests/: AdminTest.cpp  BedrockConfig.hpp  CMakeLists.txt  ClientTest.cpp  Configs.hpp  ConsumerTest.cpp  DefaultPartitionTest.cpp  Ensure.hpp  EventConsumerTest.cpp  EventProducerTest.cpp  EventbridgeTest.cpp  KafkaConsumerTest.cpp  KafkaDataSelectionTest.cpp  KafkaDriverTest.cpp  KafkaEventConsumerTest.cpp  KafkaEventProducerTest.cpp  KafkaProducerTest.cpp  MofkaAckEarlyTest.cpp  MofkaConsumerTest.cpp  MofkaDataSelectionTest.cpp  MofkaDefaultPartitionTest.cpp  MofkaDriverTest.cpp  MofkaEventConsumerTest.cpp  MofkaEventProducerTest.cpp  MofkaEventbridgeTest.cpp  MofkaLegacyPartitionTest.cpp  MofkaProducerTest.cpp  MofkaWriteCacheTest.cpp  ProducerTest.cpp  ResourceTest.cpp  TopicTest.cpp  config.json  mofka-default-topic-args.json  mofka-legacy-topic-args.json  mofka-memory-topic-args.json  post-test.sh  pre-test.sh  run-benchmark.sh  run-test-with-kafka.sh  run-test-with-mofka.sh  (+1 more)
tests/python/: CMakeLists.txt  config.json  test-client.py  test-consumer.py  test-producer.py  test-service-handle.py  test-topic-handle.py  test_kafka_consumer.py  test_kafka_driver.py  test_kafka_producer.py  test_kafka_topic_handle.py  test_mofka_consumer.py  test_mofka_driver.py  test_mofka_producer.py  test_mofka_schema.py  test_mofka_topic_handle.py
tests/python/cpputils/: CMakeLists.txt
tests/python/cpputils/src/: MyDataBrokerDSelector.cpp  MyPartitionSelector.cpp  MySerializer.cpp  MyValidator.cpp  test_data_broker_selector.cpp
tests/python/customs/: CMakeLists.txt  MyPartitionSelector.cpp  MySerializer.cpp  MyValidator.cpp
